# pax

./: Cargo.toml  LOCAL_DEVELOPMENT.md  README.md  RELEASE_PROCESS.md  TAURI_PAX_PROJECT_OVERVIEW.md  TAURI_PAX_QUICK_START.md  TAURI_PAX_README.md  TAURI_PAX_SESSION_HANDOFF.md
examples/src/ssr-reactive-dashboard/: Cargo.toml  README.md
examples/src/ssr-reactive-dashboard/src/: lib.pax  lib.rs
examples/src/ssr-reactive-dashboard/websocket-server/: pyproject.toml
examples/src/ssr-reactive-dashboard/websocket-server/app/: main.py  main_basic_template.py  main_corrected.py  main_corrected_final.py  main_corrected_syntax.py  main_final.py  main_fixed.py  main_fixed_final.py  main_template_fixed.py
pax-chassis-common/: Cargo.toml
pax-chassis-common/src/: core_graphics_c_bridge.rs
pax-chassis-tauri/: Cargo.toml  PERFORMANCE_BASELINE.md  README.md
pax-chassis-tauri/examples/basic-app/: Cargo.toml
pax-chassis-tauri/examples/basic-app/src/: cartridge.rs  lib.pax  lib.rs  main.rs  pax_engine_integration.rs
pax-chassis-tauri/examples/basic-app/src-tauri/: Cargo.toml  tauri.conf.json
pax-chassis-tauri/examples/basic-app/src-tauri/src/: main.rs
pax-chassis-tauri/src/: config.rs  error.rs  events.rs  hybrid.rs  javascript.rs  lib.rs  native.rs  pax_engine_integration.rs  performance.rs  renderer.rs  tauri_render_context.rs
pax-chassis-tauri/tests/: integration_test.rs
pax-runtime-api/src/: lib.rs
tauri-pax-docs/: CONFIGURATION_GUIDE.md  GUI_TESTING_REPORT.md  HOT_RELOAD_INVESTIGATION.md  IMPLEMENTATION_STRATEGY.md  PERFORMANCE_ANALYSIS.md  PHASE_1_FOUNDATION.md  PHASE_1_TEST_GUIDE.md  PHASE_2_NATIVE_GRAPHICS.md  PHASE_3_HYBRID_MODE.md  PHASE_3_INTERACTIVE_TESTING_REPORT.md  PHASE_4_DEVELOPER_EXPERIENCE.md  REMAINING_TASKS_REPORT.md  TECHNICAL_ARCHITECTURE.md
