[package]
name = "ssr-reactive-dashboard"
version = "0.38.3"
edition = "2021"
default-run = "run"

[dependencies]
pax-kit = { version = "0.38.3", path = "../../../pax-kit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent"] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
name = "paxcartridge"

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser"]

[[bin]]
name = "run"
path = "bin/run.rs"

[features]
designer = ["pax-kit/designer"]
parser = ["pax-kit/parser"]
web = ["pax-kit/web"]
macos = ["pax-kit/macos"]
ios = ["pax-kit/ios"]

[profile.parser]
inherits = "dev"
opt-level = 0

[profile.parser.package."*"]
inherits = "dev"
opt-level = 0

[profile.dev]
opt-level = 0
debug = false

[profile.dev.package."*"]
opt-level = 2
debug = false
